envs/basic/mock_kubesleeper.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubesleeper
  labels:
    app: kubesleeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubesleeper
  template:
    metadata:
      labels:
        app: kubesleeper
    spec:
      containers:
        - image: nginx
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
          name: nginx
          ports:
          - containerPort: 8000
      volumes:
        - name: html
          configMap:
            name: kubesleeper
        - name: nginx-config
          configMap:
            name: kubesleeper
