envs/basic/blue-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels: 
        app: blue
    spec:
      containers:
        - image: nginx
          name: nginx
# For testing awakening phase
          # command: [ "/bin/sh", "-c" ]
          # args:
          #   - |
          #     RANDOM_DELAY=$(
          #       head -c 1 /dev/urandom |
          #       od -An -t u1 |
          #       awk '{print ($1 % 30 + 30)}'
          #     );
          #     echo "Sleeping for $RANDOM_DELAY seconds (using /dev/urandom)...";
          #     sleep $RANDOM_DELAY;
          #     nginx -g 'daemon off;'
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 0
            periodSeconds: 1
---

apiVersion: v1
kind: Service
metadata:
  name: blue
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: blue
  type: ClusterIP
