envs/basic/green-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      labels: 
        app: green
    spec:
      containers:
      - image: nginx
        name: nginx
        
---

apiVersion: v1
kind: Service
metadata:
  name: green
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: green
  type: ClusterIP
